# uint24le_framing

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
src/: duplex.rs  framing.rs  lib.rs  util.rs
